# rs-handlegfa

./: .gitignore  Cargo.toml  README.md  readme.md.ffi
.github/workflows/: rust.yml
EstensioneGFARust/: Cargo.toml
EstensioneGFARust/src/: main.rs
benches/: benchmark.rs
document_md/: 01_intestazione.md  02_rs-handlegraph.md  03_c++handlegraph.md  04_differenze.md
gfa_to_handlegraph/: Cargo.toml
gfa_to_handlegraph/src/: file_operation.rs  main.rs  test.rs
gfa_to_handlegraph/src/IO_Test/: file_operation.rs  test_file_operation.rs
gfa_to_handlegraph/src/parser/: gfa_parser.rs  test_gfa_parser.rs
gfa_to_handlegraph/test/gfas/gfa1_files/: compression_test.gfa
gfa_to_handlegraph/test/gfas/gfa2_files/: spaceDocument.gfa
gfa_to_handlegraph/test/test_output_file/: output_directory_file.gfa
rs-gfa2/: Cargo.toml
rs-gfa2/benches/: benchmark.rs  parse_benchmark.rs
rs-gfa2/src/: alignment.rs  display.txt  gfa.rs  gfa.rs.txt  gfa2.rs  lib.rs  main.rs  main.rs.txt  parser.rs  parser_gfa.rs  parser_gfa.rs.txt  parser_gfa2.rs  print_gfa_2.rs  tag.rs  test.rs  writer.rs
rs-gfa2/src/error/: error.rs
rs-gfa2/src/format/: lib.rs  parser_gfa.rs  parser_gfa2.rs
rs-gfa2/src/gfa/: gfa.rs  lib.rs  parser.rs  test.rs
rs-gfa2/src/gfa2/: gfa2.rs  name_conversion.rs  orientation.rs  parser.rs  test.rs  traits.rs
rs-gfa2/src/parser_gfa2/: error.rs
rs-gfa2/src/test/: test.rs
rs-gfa2/src/tests/: tests.rs
rs-gfa2/src/tests/gfa2_files/: graph.gfa
rs-gfa2/test/gfas/gfa1_files/: check_overlap_test.gfa  check_overlap_test_no_fasta.gfa  compression_test.gfa  lil.gfa
rs-gfa2/test/gfas/gfa2_files/: example2.gfa  gfa_2  graph_nicernames.gfa  sample.gfa
rs-gfa2/tests/: tests.rs
rs-gfa2/tests/gfa2_files/: example.gfa
rs-handlegraph2/: Cargo.toml
rs-handlegraph2/src/: lib.rs
src/: alignment.rs  fileoperation.rs  gfa2.rs  graphoperation.rs  lib.rs  lib.rs.txt  main.rs  parser_gfa2.rs  print_gfa_2.rs  tag.rs
src/gfa2/: name_conversion.rs  traits.rs
src/graphoperation/: error.rs
test/gfa2_files/: big.gfa  irl.gfa  sample.gfa  sample2.gfa
test/gfas/: equality_test.gfa  example1.gfa
tests/: test.rs
tests/big_files/: diatom.gfa  diatom.gfa2  test.gfa  test.gfa2
tests/gfa1_files/: lil.gfa
tests/gfa2_files/: GFA1_TEST.gfa  data.gfa2  example_from_spec.gfa2  graph.gfa2  irl.gfa2  spec_q7.gfa  spec_q7.gfa2
tests/output_files/: file.gfa  file_gfa1.gfa  file_gfa2.gfa  file_gfa2.gfa2  gfa2_to_file.gfa  handlegraph_to_file.gfa
tests/output_files/default_path/: file.gfa  file_gfa1.gfa  file_gfa2.gfa  save_gfa2.gfa
