[package]
name = "estensione_gfa_handlegraph"
version = "0.1.0"
authors = ["DrStiev <55959491+DrStiev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = { git = "https://github.com/chfi/rs-gfa" }
handlegraph = { git = "https://github.com/chfi/rs-handlegraph" }