[package]
name = "handlegfa"
version = "0.5.3"
authors = ["Matteo Stievano <m.stievano1@campus.unimib.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for online tests
gfa2 = { git = "https://github.com/DrStiev/rs-gfa2" } 
handlegraph2 = { git = "https://github.com/DrStiev/rs-handlegraph2" }

# for local tests
# gfa2 = { path = "../rs-gfa2" }    
# handlegraph2 = { path = "../rs-handlegraph2" }   

bstr = "0.2"
clap = "3.0.0-beta.2"
