[package]
name = "gfa_to_handlegraph"
version = "0.1.0"
authors = ["DrStiev <55959491+DrStiev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the version "0.8.0" of the library gfa it's not perfect, in fact it cannot properly 
# convert some element of the GFA1 format
gfa = "0.8.0"
# gfa = { git = "https://github.com/chfi/rs-gfa" }
handlegraph = "0.5.0"
# handlegraph = { git = "https://github.com/chfi/rs-handlegraph" }
clap = "3.0.0-beta.2"
glob = "0.3.0"
bstring = "0.1.0"