[package]
name = "rs-gfa2"
version = "0.1.0"
authors = ["DrStiev <55959491+DrStiev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
clap = "3.0.0-beta.2"

[dependencies.nom]
version = "^5"
features = ["regexp"]
