[package]
name = "gfa2"
version = "0.1.0"
authors = ["DrStiev <55959491+DrStiev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
bstr = { version = "0.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
fnv = "1.0"
glob = "0.3.0"

[dependencies.nom]
version = "^5"
features = ["regexp"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
