[package]
name = "handlegraph2"
version = "0.1.0"
authors = ["DrStiev <55959491+DrStiev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
bio = "0.32"
# your dependencies
gfa2 = { path = "../rs-gfa2" } # as you may know the `..`
# in the path refers to the mother folder of the current one